force-app/main/default/objects/Customer_Visit__c/Customer_Visit__c.object-meta.xml
<CustomObject>
    <label>Customer Visit</label>
    <nameField>
        <label>Customer Visit Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Visit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>