force-app/main/default/objects/Customer_Visit__c/fields/Achivement__c.field-meta.xml
<CustomField>
    <fullName>Achivement__c</fullName>
    <label>Achievement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>