force-app/main/default/objects/Customer_Visit__c/fields/Competitor_Trends__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Trends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Trends</label>
    <type>Checkbox</type>
</CustomField>