force-app/main/default/objects/Customer_Visit__c/fields/Competitor_Trends_Printalble__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Trends_Printalble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1.Printalble</label>
    <type>Checkbox</type>
</CustomField>