force-app/main/default/objects/Customer_Visit__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <inlineHelpText>If there are multiple visitors, they can be listed one by one in the format: Title1/Title2/Title3...</inlineHelpText>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>