force-app/main/default/objects/Customer_Visit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>$Source.Visiting_The_Market__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Visiting_The_Market__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Visiting_The_Market__c</field>
            <operation>equals</operation>
            <valueField>Account.Hisense_Entity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Visit</relationshipLabel>
    <relationshipName>CustomerVisitToAccount</relationshipName>
    <type>Lookup</type>
</CustomField>