force-app/main/default/objects/Customer_Visit__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Customer__r.Customer_SF_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*客户Key</label>
    <type>Text</type>
</CustomField>