force-app/main/default/objects/Customer_Visit__c/fields/Customer_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management_Name__c</fullName>
    <description>报表使用</description>
    <formula>Customer__r.Customer_Management_Name__r.Name</formula>
    <label>Customer Management Name</label>
    <type>Text</type>
</CustomField>