force-app/main/default/objects/Customer_Visit__c/fields/Customer_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Region__c</fullName>
    <formula>IF((ISPICKVAL(Customer__r.Hisense_Entity__c, &apos;8410&apos;) || ISPICKVAL(Customer__r.Sales_Region__c , &apos;Hisense Japan&apos;)), &apos;Hisense Japan&apos;,  TEXT(Customer__r.Sales_Region__c) )</formula>
    <label>Customer Sales Region</label>
    <type>Text</type>
</CustomField>