force-app/main/default/objects/Customer_Visit__c/fields/Customer_SapCode__c.field-meta.xml
<CustomField>
    <fullName>Customer_SapCode__c</fullName>
    <formula>Customer__r.SAP_Customer_Code__c</formula>
    <label>Customer SapCode</label>
    <type>Text</type>
</CustomField>