force-app/main/default/objects/Customer_Visit__c/fields/Customer_Visit_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Code__c</fullName>
    <displayFormat>CV{YYYY}{MM}{DD}{0000}</displayFormat>
    <inlineHelpText>Customer Visit Code will be generated automatically after record creation.</inlineHelpText>
    <label>Customer Visit Code</label>
    <type>AutoNumber</type>
</CustomField>