force-app/main/default/objects/Customer_Visit__c/fields/Hisense_Client_Operating_Printalble__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Client_Operating_Printalble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2.Printalble</label>
    <type>Checkbox</type>
</CustomField>