force-app/main/default/objects/Customer_Visit__c/fields/Hisense_Client_s_Operating_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Client_s_Operating_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operation Conditions of Both Parties</label>
    <type>Checkbox</type>
</CustomField>