force-app/main/default/objects/Customer_Visit__c/fields/Hisense_Customers_Implementation_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Customers_Implementation_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hisense&amp;Customers Implementation Scheme</label>
    <type>Checkbox</type>
</CustomField>