force-app/main/default/objects/Customer_Visit__c/fields/Hisense_Other_Issues_Printable__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Other_Issues_Printable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6.Printable</label>
    <type>Checkbox</type>
</CustomField>