force-app/main/default/objects/Customer_Visit__c/fields/Hisense_s_Strategic_Program_Progress__c.field-meta.xml
<CustomField>
    <fullName>Hisense_s_Strategic_Program_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hisense&apos;s Strategic Program &amp; Progress</label>
    <type>Checkbox</type>
</CustomField>