force-app/main/default/objects/Customer_Visit__c/fields/Hisense_s_Strategic_Program_Progress_Pri__c.field-meta.xml
<CustomField>
    <fullName>Hisense_s_Strategic_Program_Progress_Pri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3.Printable</label>
    <type>Checkbox</type>
</CustomField>