force-app/main/default/objects/Customer_Visit__c/fields/Hisense_Yearly_Sales_Goal_Promotion_Node__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Yearly_Sales_Goal_Promotion_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hisense yearly sales goal,promo key step</label>
    <type>Checkbox</type>
</CustomField>