force-app/main/default/objects/Customer_Visit__c/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <label>Impact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>中</fullName>
                <label>Middle</label>
            </value>
            <value>
                <fullName>低</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>