force-app/main/default/objects/Customer_Visit__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <description>Inventory detail</description>
    <label>Inventory</label>
    <type>TextArea</type>
</CustomField>