force-app/main/default/objects/Customer_Visit__c/fields/Inventory_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>入库/交货日程</description>
    <label>入库/交货日程</label>
    <type>Checkbox</type>
</CustomField>