force-app/main/default/objects/Customer_Visit__c/fields/Inventory_Printable__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Printable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>8.Printable</label>
    <type>Checkbox</type>
</CustomField>