force-app/main/default/objects/Customer_Visit__c/fields/isSendEmail__c.field-meta.xml
<CustomField>
    <fullName>isSendEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>*isSendEmail</label>
    <type>Checkbox</type>
</CustomField>