force-app/main/default/objects/Customer_Visit__c/fields/JP_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>JP_Customer_Request__c</fullName>
    <description>取引先からの要求</description>
    <label>JP Customer Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>