force-app/main/default/objects/Customer_Visit__c/fields/JP_Next_Schedule__c.field-meta.xml
<CustomField>
    <fullName>JP_Next_Schedule__c</fullName>
    <label>JP Next Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>