force-app/main/default/objects/Customer_Visit__c/fields/JP_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>JP_Product_Line__c</fullName>
    <description>日本产品线</description>
    <label>JP Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>