force-app/main/default/objects/Customer_Visit__c/fields/JP_Visit_Problem__c.field-meta.xml
<CustomField>
    <fullName>JP_Visit_Problem__c</fullName>
    <description>問題や課題点</description>
    <label>JP Visit Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>