force-app/main/default/objects/Customer_Visit__c/fields/JP_Visit_Result__c.field-meta.xml
<CustomField>
    <fullName>JP_Visit_Result__c</fullName>
    <description>商談目的と成果</description>
    <label>JP Visit Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>