force-app/main/default/objects/Customer_Visit__c/fields/Key_Communication_Points_For_The_Plan__c.field-meta.xml
<CustomField>
    <fullName>Key_Communication_Points_For_The_Plan__c</fullName>
    <label>Key Communication Points For The Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>