force-app/main/default/objects/Customer_Visit__c/fields/Meeting_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Minutes__c</fullName>
    <label>Meeting Minutes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>