force-app/main/default/objects/Customer_Visit__c/fields/MeetingContent__c.field-meta.xml
<CustomField>
    <fullName>MeetingContent__c</fullName>
    <label>商谈内容</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>