force-app/main/default/objects/Customer_Visit__c/fields/Next_Planned_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Planned_Visit_Time__c</fullName>
    <label>Next Planned Visit Time</label>
    <type>Date</type>
</CustomField>