force-app/main/default/objects/Customer_Visit__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>&quot;Notes&quot; - Information will not be printed in PDF, it is just the recorded message for Hisense people.</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>