force-app/main/default/objects/Customer_Visit__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>