force-app/main/default/objects/Customer_Visit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>Customer_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>