force-app/main/default/objects/Customer_Visit__c/fields/Other_Issues__c.field-meta.xml
<CustomField>
    <fullName>Other_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Issues</label>
    <type>Checkbox</type>
</CustomField>