force-app/main/default/objects/Customer_Visit__c/fields/Participants_Customer__c.field-meta.xml
<CustomField>
    <fullName>Participants_Customer__c</fullName>
    <label>拜访参与人（客户）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>