force-app/main/default/objects/Customer_Visit__c/fields/Participants_Hisense__c.field-meta.xml
<CustomField>
    <fullName>Participants_Hisense__c</fullName>
    <label>拜访参与人（Hisense）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>