force-app/main/default/objects/Customer_Visit__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>