force-app/main/default/objects/Customer_Visit__c/fields/Policy_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Rebate</label>
    <type>Checkbox</type>
</CustomField>