force-app/main/default/objects/Customer_Visit__c/fields/Problem_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Problem_Recognition__c</fullName>
    <label>Problem Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>