force-app/main/default/objects/Customer_Visit__c/fields/Problems_to_be_Solved_by_Hisense1__c.field-meta.xml
<CustomField>
    <fullName>Problems_to_be_Solved_by_Hisense1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problems to be Solved by Hisense</label>
    <type>Checkbox</type>
</CustomField>