force-app/main/default/objects/Customer_Visit__c/fields/Problems_to_be_solved_by_Hisense__c.field-meta.xml
<CustomField>
    <fullName>Problems_to_be_solved_by_Hisense__c</fullName>
    <inlineHelpText>Supports needed by clients, including prodcut,logistics, aftersales services, etc...</inlineHelpText>
    <label>DEL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>