force-app/main/default/objects/Customer_Visit__c/fields/Problems_to_be_Solved_by_Hisense_Printab__c.field-meta.xml
<CustomField>
    <fullName>Problems_to_be_Solved_by_Hisense_Printab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4.Printable</label>
    <type>Checkbox</type>
</CustomField>