force-app/main/default/objects/Customer_Visit__c/fields/Products_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Products_Recommendation__c</fullName>
    <label>Products Recommendation</label>
    <type>TextArea</type>
</CustomField>