force-app/main/default/objects/Customer_Visit__c/fields/Promotion11__c.field-meta.xml
<CustomField>
    <fullName>Promotion11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotion</label>
    <type>Checkbox</type>
</CustomField>