force-app/main/default/objects/Customer_Visit__c/fields/PSI__c.field-meta.xml
<CustomField>
    <fullName>PSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PSI状況</description>
    <label>PSI状況</label>
    <type>Checkbox</type>
</CustomField>