force-app/main/default/objects/Customer_Visit__c/fields/Recommended_Measure__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Measure__c</fullName>
    <label>Recommended Measure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>