force-app/main/default/objects/Customer_Visit__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_540, FIND( &apos;.my.salesforce.com/services&apos;,$Api.Enterprise_Server_URL_540))+ &apos;lightning.force.com/lightning/r/Customer_Visit__c/&apos; +Id + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*客户拜访记录链接</label>
    <type>Text</type>
</CustomField>