force-app/main/default/objects/Customer_Visit__c/fields/Retail_Channel__c.field-meta.xml
<CustomField>
    <fullName>Retail_Channel__c</fullName>
    <label>Retail Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harvey Norman</fullName>
            </value>
            <value>
                <fullName>JB Hi-Fi</fullName>
            </value>
            <value>
                <fullName>The Good Guys</fullName>
            </value>
            <value>
                <fullName>Bing Lee</fullName>
            </value>
            <value>
                <fullName>Retravision</fullName>
            </value>
            <value>
                <fullName>Radio Rentals</fullName>
            </value>
            <value>
                <fullName>RT Edwards&apos;s</fullName>
            </value>
            <value>
                <fullName>Joyce Mayne</fullName>
            </value>
            <value>
                <fullName>Domayne</fullName>
            </value>
            <value>
                <fullName>Betta Home Living</fullName>
            </value>
            <value>
                <fullName>Bi Rite</fullName>
            </value>
            <value>
                <fullName>Myer</fullName>
            </value>
            <value>
                <fullName>Coogans,</fullName>
            </value>
            <value>
                <fullName>Mitchell &amp; Brown</fullName>
            </value>
            <value>
                <fullName>Leading Appliances</fullName>
            </value>
            <value>
                <fullName>VideoPro</fullName>
            </value>
            <value>
                <fullName>Appliances Online</fullName>
            </value>
            <value>
                <fullName>DDL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>