force-app/main/default/objects/Customer_Visit__c/fields/Sales_Expected_Remind_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Expected_Remind_Date__c</fullName>
    <label>Expected Reminding Date</label>
    <type>Date</type>
</CustomField>