force-app/main/default/objects/Customer_Visit__c/fields/Sales_targets_of_a_year_and_progress__c.field-meta.xml
<CustomField>
    <fullName>Sales_targets_of_a_year_and_progress__c</fullName>
    <label>Sales targets of a year and  progress</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>