force-app/main/default/objects/Customer_Visit__c/fields/SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Code__c</fullName>
    <formula>Customer__r.SAP_Customer_Code__c</formula>
    <label>SAP Customer Code</label>
    <type>Text</type>
</CustomField>