force-app/main/default/objects/Customer_Visit__c/fields/Send_Email_Address10__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Address10__c</fullName>
    <label>Send_Email_Address10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>