force-app/main/default/objects/Customer_Visit__c/fields/Send_Email_Address2__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Address2__c</fullName>
    <label>Send Email Address2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>