force-app/main/default/objects/Customer_Visit__c/fields/SKU_Display__c.field-meta.xml
<CustomField>
    <fullName>SKU_Display__c</fullName>
    <label>SKU &amp; Display</label>
    <type>TextArea</type>
</CustomField>