force-app/main/default/objects/Customer_Visit__c/fields/Statistics_of_Model_Machine_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Statistics_of_Model_Machine_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statistics of Model Machine&amp; Inventory</label>
    <type>Checkbox</type>
</CustomField>