force-app/main/default/objects/Customer_Visit__c/fields/Status_Quo_of_Industry__c.field-meta.xml
<CustomField>
    <fullName>Status_Quo_of_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industry Status Quo</label>
    <type>Checkbox</type>
</CustomField>