force-app/main/default/objects/Customer_Visit__c/fields/Store_Name_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Store_Name_Suburb__c</fullName>
    <label>Store Name/Suburb</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>