force-app/main/default/objects/Customer_Visit__c/fields/Type_Of_Session__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Session__c</fullName>
    <label>Type of Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Hours Training</fullName>
            </value>
            <value>
                <fullName>After Hours Training</fullName>
            </value>
            <value>
                <fullName>Multi-Store Training</fullName>
            </value>
            <value>
                <fullName>Instore Training</fullName>
            </value>
            <value>
                <fullName>On-line Taining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>