force-app/main/default/objects/Customer_Visit__c/fields/Visit_Category__c.field-meta.xml
<CustomField>
    <fullName>Visit_Category__c</fullName>
    <label>Visit Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Company</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shop Tour</fullName>
            </value>
            <value>
                <fullName>Video Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>