force-app/main/default/objects/Customer_Visit__c/fields/Visit_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_End_Time__c</fullName>
    <label>Visit End Time</label>
    <type>Time</type>
</CustomField>