force-app/main/default/objects/Customer_Visit__c/fields/Visit_Matter__c.field-meta.xml
<CustomField>
    <fullName>Visit_Matter__c</fullName>
    <label>Visit Matter</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>