force-app/main/default/objects/Customer_Visit__c/fields/Visit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Visit_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Owner</label>
    <type>Text</type>
</CustomField>