force-app/main/default/objects/Customer_Visit__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <label>Agenda</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>