force-app/main/default/objects/Customer_Visit__c/fields/Visit_Purpose_Asean__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose_Asean__c</fullName>
    <label>Visit Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>