force-app/main/default/objects/Customer_Visit__c/fields/VisitCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>VisitCompletedDate__c</fullName>
    <label>Visit Completed Date</label>
    <type>Date</type>
</CustomField>