force-app/main/default/objects/Customer_Visit__c/fields/Visitor_Name13__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name13__c</fullName>
    <label>Visitor Name13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>