force-app/main/default/objects/Customer_Visit__c/fields/Visitor_Name14__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name14__c</fullName>
    <label>Visitor Name14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>