force-app/main/default/objects/Customer_Visit__c/recordTypes/ASEAN_Customer_Visit.recordType-meta.xml
<RecordType>
    <fullName>ASEAN_Customer_Visit</fullName>
    <active>true</active>
    <label>ASEAN Customer Visit</label>
</RecordType>