force-app/main/default/objects/Customer_Visit__c/recordTypes/AU_Store_Visit.recordType-meta.xml
<RecordType>
    <fullName>AU_Store_Visit</fullName>
    <active>true</active>
    <label>AU Store Visit</label>
</RecordType>