force-app/main/default/objects/Customer_Visit__c/recordTypes/hvachvac.recordType-meta.xml
<RecordType>
    <fullName>hvachvac</fullName>
    <active>true</active>
    <label>hvac</label>
</RecordType>