force-app/main/default/objects/Customer_Visit__c/recordTypes/JP_Customer_Visit.recordType-meta.xml
<RecordType>
    <fullName>JP_Customer_Visit</fullName>
    <active>true</active>
    <label>JP Customer Visit</label>
</RecordType>