force-app/main/default/objects/Customer_Visit__c/recordTypes/System_Default_Customer_Visit.recordType-meta.xml
<RecordType>
    <fullName>System_Default_Customer_Visit</fullName>
    <active>true</active>
    <label>System Default Customer Visit</label>
</RecordType>