force-app/main/default/objects/Customer_Visit__c/validationRules/VisitCompleteDataValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>VisitCompleteDataValidation</fullName>
    <active>false</active>
    <description>当状态选择的是完成时，要求填写完成时间</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Completed&quot; ),
ISBLANK(VisitCompletedDate__c)
)</errorConditionFormula>
    <errorDisplayField>VisitCompletedDate__c</errorDisplayField>
    <errorMessage>If the record is marked as &quot;Complete&quot;, please enter the  “Completion date”.</errorMessage>
</ValidationRule>