force-app/main/default/objects/Customer_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer__c</columns>
    <columns>NAME</columns>
    <columns>Visit_Date__c</columns>
    <columns>Place__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Category__c</columns>
    <columns>Country__c</columns>
    <columns>Visit_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>