force-app/main/default/objects/Customer_Visit__c/listViews/Australia.listView-meta.xml
<ListView>
    <fullName>Australia</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_Category__c</columns>
    <columns>Place__c</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>Visit_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>AU</value>
    </filters>
    <label>Australia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AU_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>